# spotify-id3

./: .gitignore  Cargo.toml  README.md
src/: arguments.rs  main.rs  output.rs
src/spotify/: client.rs  id.rs  mod.rs
src/spotify/track/: features.rs  metadata.rs  mod.rs  picture.rs
