[package]
name = "spotify-id3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
colored = "2.0.0"
futures = "0.3.25"
hyper = "0.14.23"
hyper-tls = "0.5.0"
id3 = "1.6.0"
rspotify = "0.11.6"
tokio = { version = "1.24.1", features = ["full"] }
